# ZJUCrawler

./: .gitignore  README.md  setup.cfg
.github/workflows/: workflow.yml
zju_fetcher/: school_fetcher.py
zjucrawler/: school_crawler.py
