[metadata]
name = zjucrawler
version = 1.0.0
author = cubicYYY
long_description = file: README.md
license = MIT
url = https://github.com/cubicYYY/ZJUCrawler
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    selenium
    webdriver_manager
    PyExecJs
    aiohttp

[options.package_data]
zju_fetcher = 
    security.js